homework/Homework-1/flask_app/static/piano/css/piano.css
html {
    height: 100%;
    width: 100%;
}

body {
    height: 100%
}
.Piano-Project {
    display: flex;
    flex-direction: column;
    justify-content: center; 
    align-items: center;
    position: relative;
    width: 100%;
    height: 100%;
}

.piano {
    display: flex;
    flex-direction: column;
    background-color: #636363;
    align-items: center;
    justify-content: flex-end;
    width: 50%; 
    height: 50%; 
    border-radius: 5% 5% 0 0;

    padding: 3%;
    margin-bottom: 10%;

}

.piano-text {
    margin-bottom: 10%;
}

.image-and-text {
    display: flex;
    flex-direction: column;
    justify-content: flex-start; 
    align-items: center; 
    position: absolute;
    width: 55%; 
    height: 55%;
    top: 15%;
    opacity: 0; /* So my old one image does not appear */


}
.old-one {
    position: absolute;
    
    z-index: -3;
    width: 100%; 
    height: 100%; 
    border-radius: 10% 10% 0 0;

}

.Old-one-text {
    z-index: -3;
    color:#fff;
    position: absolute;
    
}



.keys {
    display: flex;
    flex-direction: row;
    align-items: flex-end; 
    justify-content: center;
    width: 100%; 
    height: 80%; 
    z-index: 2;

}



.white-key, .black-key {
    border-radius: 5% 5% 5% 5%;
    position: relative;
    display: flex;
    justify-content: center;
    
    align-items: flex-end;
    color: #636363;
    flex-grow: 1;


}

.white-key {
    background-color: #fff; 
    width: 8%; 
    height: 100%; 
    z-index: 0; 


    border: 1px solid #ccc; 

}

.black-key {
    background-color: #000; 
    
    width: 7%;
    height: 56%;
    top: -45%;
    z-index: 1; 
    margin-left: -4%;
    margin-right: -4%;

}


.letter { 
    opacity: 0%;
} 
   
  

